# CORE3D

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/llm/: reason3d.json  scanrefer.json  surprise3d.json
data/scannetpp/: extract_top200.py
data/scannetpp/metadata/semantic_benchmark/: map_benchmark.csv  (+2 more)
docs/: DATA.md  INSTALL.md
ezsp/: generate_superpoints.py  train_partition.py
ezsp/src/: __init__.py  eval.py
ezsp/src/datasets/: __init__.py  scannet.py  scannet_config.py
ezsp/src/metrics/: __init__.py
ezsp/src/models/: panoptic.py
ezsp/src/nn/: __init__.py  sparse.py  stage.py  transformer.py
ezsp/src/transforms/: __init__.py  graph.py  partition.py  point.py
ezsp/src/utils/: __init__.py  list.py  neighbors.py  partition.py  scannet.py  scatter.py
graph/: build_graph.py  graph_edges.py  graph_features.py  graph_io.py  graph_output.py  oneformer_mapping.py
graph/builders/: gt.py  oneformer.py
graph/data/: scannet200_classes.json
graph/datasets/: __init__.py  scannet200.py  scannetpp.py
llm/: benchmarks.py  core.py  datasets.py  prompts.py  run.py
llm/eval/: eval_multi3drefer_f1.py  eval_reason3d_iou.py  eval_scanrefer_iou.py  eval_surprise3d_iou.py
requirements/: core.txt  llm.txt
scripts/: analyze_scanrefer_failures.py  prepare_scannet200.sh  rebuild_core_test.sh  run_ezsp.sh  run_graph_gt.sh  run_graph_oneformer.sh  run_llm_inference.sh  run_oneformer_inference.sh
thirdparty_patches/: minkowskiengine_cuda12.patch
tools/: create_data.py  indoor_converter.py  scannet_data_utils.py  update_infos_to_v2.py
