[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core-3d"
version = "0.1.0"
description = "3D Scene Graph + LLM Reasoning Pipeline"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "plyfile",
    "tqdm",
    "h5py",
]

[project.optional-dependencies]
llm = ["vllm>=0.12.0", "transformers", "peft", "pycocoevalcap"]

[tool.setuptools.packages.find]
include = ["graph*", "llm*", "ezsp*"]
